--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
   "dependencies": {
     "axios": "^0.27.2",
     "clsx": "^1.2.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
-    "@ant-design/charts": "^1.4.2",
+    "@ant-design/charts": "^1.2.14",
     "@ant-design/icons": "^4.7.0",
     "@babel/core": "^7.15.0",
     "@babel/eslint-parser": "^7.18.9",
@@ -61,7 +62,7 @@
     "style-loader": "^3.2.1",
     "stylelint": "^14.10.0",
     "typescript": "^4.8.4",
-    "typescript-plugin-css-modules": "^3.4.0",
+    "typescript-plugin-css-modules": "^1.3.1",
     "webpack": "^5.45.1",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.2",
