--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=prod webpack --config webpack/webpack.config.js",
     "dev": "cross-env NODE_ENV=dev webpack --config webpack/webpack.config.js",
-    "format": "eslint src",
+    "format": "eslint src --cache --fix",
     "format:style": "stylelint \"src/**/*.scss\" --cache --fix",
     "serve": "cross-env NODE_ENV=dev SERV=true webpack serve --open --config webpack/webpack.config.js",
     "start": "cross-env NODE_ENV=dev SERV=true webpack serve --config webpack/webpack.config.js",
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "body-parser": "^1.20.1",
     "clsx": "^1.2.1",
+    "express": "^4.18.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
